a1/brendan_gordon/TEST_PROGRAMS/invalidtype/theo_szymkowiak/prgm2.min
# Cannot cast from float to int
var x: int;
var y: float;

y = 2.0;

x = y;

